--- a/source/less/blocks/button-form.less
+++ b/source/less/blocks/button-form.less
@@ -18,6 +18,15 @@
   border: none;
 }
 
+.button-form:hover {
+  background-color: @dark-blue;
+}
+
+.button-form:focus {
+  background-color: @very-dark-blue;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 @media (min-width: @tablet-width) {
   .button-form {
     width: 324px;
