--- a/source/less/blocks/button-module1.less
+++ b/source/less/blocks/button-module1.less
@@ -16,6 +16,15 @@
   border: none;
 }
 
+.button-module1:hover {
+  background-color: @dark-blue;
+}
+
+.button-module1:focus {
+  background-color: @very-dark-blue;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 @media (min-width: @tablet-width) {
   .button-module1 {
     width: 272px;
