--- a/source/less/blocks/button-module2.less
+++ b/source/less/blocks/button-module2.less
@@ -15,6 +15,15 @@
   border: none;
 }
 
+.button-module1:hover {
+  background-color: @dark-blue;
+}
+
+.button-module1:focus {
+  background-color: @very-dark-blue;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 @media (min-width: @tablet-width) {
   .button-module2 {
     width: 458px;
