--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -21,6 +21,7 @@
 
 .button:focus {
   background-color: @very-dark-blue;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 @media (min-width: @tablet-width) {
