--- a/source/less/blocks/discription.less
+++ b/source/less/blocks/discription.less
@@ -23,6 +23,10 @@
   text-transform: none;
 }
 
+.discription__comment::placeholder {
+  color: #000000;
+}
+
 .discription__comment {
   width: 250px;
   color: #000000;
