--- a/source/less/blocks/panel.less
+++ b/source/less/blocks/panel.less
@@ -30,8 +30,7 @@
   display: block;
   width: 235px;
   height: 3px;
-  background-color: #858585;
-  opacity: 0.6;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .panel__volume-level--circle::before {
@@ -44,8 +43,7 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #ffffff;
-  opacity: 0.98;
+  background-color: rgba(255, 255, 255, 0.98);
 }
 
 .panel__wrap-replay {
@@ -148,19 +146,11 @@
     border: none;
   }
 
-  .panel__replay path {
-    fill: #ffffff;
-  }
-
   .panel__subtitles {
     margin-left: 29px;
     margin-top: 35px;
     background-color: rgba(1, 1, 1, 0.001);
     border: none;
-  }
-
-  .panel__subtitles path {
-    fill: #ffffff;
   }
 
   .panel__fullscreen {
@@ -170,8 +160,25 @@
     border: none;
   }
 
+  .panel__replay path,
+  .panel__subtitles path,
   .panel__fullscreen svg {
-    fill: #ffffff;
+    fill: rgba(255, 255, 255, 0.98);
+  }
+
+  .panel__replay:hover path,
+  .panel__subtitles:hover path,
+  .panel__fullscreen:hover svg {
+    fill: rgba(255, 255, 255, 0.6);
+  }
+
+  .panel__replay:active path,
+  .panel__subtitles:active path,
+  .panel__fullscreen:active svg,
+  .panel__replay:focus path,
+  .panel__subtitles:focus path,
+  .panel__fullscreen:focus svg {
+    fill: rgba(255, 255, 255, 0.3);
   }
 
   .panel {
@@ -191,8 +198,6 @@
     display: block;
     width: 389px;
     height: 3px;
-    background-color: #858585;
-    opacity: 0.6;
   }
 
   .panel__volume-level--circle::before {
@@ -201,12 +206,6 @@
     display: block;
     top: -3.5px;
     left: 112px;
-    z-index: 10;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    opacity: 0.98;
   }
 }
 
