Проект правка 15 от 21.05.2020

--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -156,9 +156,13 @@
 
   .bridge__recomendation {
     display: block;
-    width: 233px;
+    width: 220px;
     margin: 0;
     padding: 0;
+  }
+
+  .bridge__recomendation br {
+    display: none;
   }
 
   .bridge__picture {
