--- a/source/less/blocks/customer.less
+++ b/source/less/blocks/customer.less
@@ -45,15 +45,16 @@
   margin: 0;
   margin-bottom: 23px;
   padding-left: 23px;
+  background-color: @gray;
+  border: none;
+}
 
+.customer__name-holder::placeholder {
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
   color: #000000;
-
-  background-color: @gray;
-  border: none;
 }
 
 .customer__name-holder:hover {
@@ -95,15 +96,16 @@
   height: 58px;
   margin-bottom: 20px;
   padding-left: 22px;
+  background-color: @gray;
+  border: none;
+}
 
+.customer__surname-holder::placeholder {
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
   color: #000000;
-
-  background-color: @gray;
-  border: none;
 }
 
 .customer__surname-holder:hover {
@@ -144,15 +146,16 @@
   width: 193px;
   height: 58px;
   padding-left: 22px;
+  background-color: @gray;
+  border: none;
+}
 
+.customer__patronymic-holder::placeholder {
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
   text-align: left;
   color: #000000;
-
-  background-color: @gray;
-  border: none;
 }
 
 .customer__patronymic-holder:hover {
