--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -41,8 +41,8 @@
 .reasons__number-zero {
   display: inline-block;
   width: 270px;
-  padding-top: 22px;
-  padding-left: 30px;
+  padding-top: 23px;
+  padding-left: 35px;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
@@ -55,7 +55,8 @@
   display: inline-block;
   margin-top: 1px;
   padding-top: 10px;
-  padding-left: 34px;
+  padding-left: 12px;
+  padding-right: 10px;
   font-size: @little-font;
   line-height: 26px;
   text-align: center;
