--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -11,9 +11,14 @@
 }
 
 @media (min-width: @tablet-width) {
+  .video {
+    height: 570px;
+  }
+
   .video__picture {
     width: 648px;
     height: 499px;
+    margin-top: 50px;
   }
 }
 
