--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -126,6 +126,7 @@
   }
 
   .photos-item__div-wrapsunset {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
@@ -145,11 +146,116 @@
     margin-top: 21px;
   }
 
+  .photos-item__likes-icon {
+    background-color: rgba(242, 242, 242, 0.98);
+  }
+
   .photos-item__numbers-wrap {
     margin-left: 2px;
   }
 
   .photos-item__likes-icon path {
     fill: rgba(1, 1, 1, 0.3);
+  }
+
+  .photos-item__a-wrap {
+    width: 324px;
+    height: 267px;
+  }
+
+  .photos-item__picture {
+    width: 324px;
+  }
+
+  .photos-item__div-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-left: 20px;
+    width: 324px;
+    height: 80px;
+    background-color: rgba(242, 242, 242, 0.98);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .photos-item {
+    position: relative;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 400px;
+    height: 267px;
+  }
+
+  .photos-item__sunset {
+    position: relative;
+    width: 1200px;
+    height: auto;
+  }
+
+  .photos-item__a-wrapsunset {
+    width: 1200px;
+    height: 400px;
+  }
+
+  .photos-item__picture-sunset {
+    width: 1200px;
+    height: 400px;
+  }
+
+  .photos-item__div-wrapsunset {
+    position: absolute;
+    top: 320px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-left: 20px;
+    width: 1200px;
+    height: 80px;
+    background-color: rgba(1, 1, 1, 0.3);
+  }
+
+  .photos-item__title {
+    color: #ffffff;
+  }
+
+  .photos-item__author {
+    color: #ffffff;
+  }
+
+  .photos-item__likes-icon {
+    background-color: rgba(1, 1, 1, 0.001);
+  }
+
+  .photos-item__likes-icon path {
+    fill: rgba(255, 255, 255, 0.99);
+  }
+
+  .photos-item__numbers {
+    color: #ffffff;
+  }
+
+  .photos-item__a-wrap {
+    width: 400px;
+    height: 267px;
+  }
+
+  .photos-item__picture {
+    width: 400px;
+  }
+
+  .photos-item__div-wrap {
+    position: absolute;
+    top: 187px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-left: 20px;
+    width: 400px;
+    height: 80px;
+    background-color: rgba(1, 1, 1, 0.3);
   }
 }
