--- a/source/less/blocks/realtown.less
+++ b/source/less/blocks/realtown.less
@@ -57,8 +57,8 @@
   width: 268px;
   padding: 0;
   margin: 0;
-  margin-left: 30px;
-  padding-top: 15px;
+  margin-left: 20px;
+  padding-top: 17px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
@@ -96,6 +96,7 @@
   }
 
   .realtown__recomendation {
+    width: 163px;
     margin: 0;
     padding: 0;
     padding-top: 22px;
@@ -130,6 +131,8 @@
   .realtown__recomendation {
     width: 280px;
     margin: 0;
+    margin-right: 10px;
+    margin-top: 2px;
     padding: 0;
   }
 
